# pressure_log

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  main.py  pyproject.toml
src/: app.py  calc_stats.py  crud.py  dashapp.py  fig_handler.py  shemas.py  stats_table.py
src/localization/: en.py  ru.py
src/templates/: base.html  dashboard.html  data.html
